most of a rough ui, flagging error 403 when trying to use the api

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <script src="script.js" async></script>
 </head>
 <body>
-
+  <div id="root">
+    <header>
+      <h1>Currency Converter</h1>
+    </header>
+  </div>
 </body>
 </html>
